# BiasharaMind

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  temp-assessment.json  temp-business-profile.json
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260412_0001_initial_postgres_persistence.py  20260423_0002_add_analysis_runs.py  20260423_0003_add_business_profiles_v2.py  20260423_0004_add_assessments_v2.py  20260423_0005_add_v2_refs_to_analysis_runs.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: auth.py  config.py  responses.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  analysis.py  analysis_run.py  assessment.py  assessment_v2.py  business_profile.py  business_profile_v2.py  placeholders.py  report.py  roadmap.py
apps/api/app/repositories/: __init__.py  analysis_repository.py  assessment_repository.py  business_profile_repository.py  placeholders.py  report_repository.py  roadmap_repository.py
apps/api/app/schemas/: __init__.py  analysis.py  assessment.py  business_profile.py  report.py  roadmap.py  stub.py
apps/api/app/services/: analysis_service.py  assessment_service.py  placeholders.py  (+3 more)
apps/api/biasharamind_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_v2_ai_interpretation.py  test_v2_analysis.py  test_v2_assessment.py  test_v2_business_profile.py  test_v2_foundation.py
apps/worker/: README.md  pyproject.toml
apps/worker/src/: __init__.py  config.py  main.py
(+124 files in other folders)
