[project]
name = "biasharamind-worker"
version = "0.1.0"
description = "LangGraph worker scaffold for BiasharaMind"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.50,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
